--- a/PointCheckout/PointCheckoutPaymentGateway/view/frontend/templates/confirm.phtml
+++ b/PointCheckout/PointCheckoutPaymentGateway/view/frontend/templates/confirm.phtml
@@ -4,15 +4,19 @@
  */
  $response = array();
  $response = $block->confirmPayment();
- $response_info = json_decode($response);
- if ($response_info ->success == true && $response_info ->result->status == 'PAID'){
-    $actionUrl = $block->getSuccessUrl();
-    
- }elseif($response_info ->success == true && $response_info ->result->status == 'PENDING'){
-     $actionUrl = $block->getPointCheckoutUrl();
-     
+ if(!$response){
+    $actionUrl = $block->getFailureUrl();
  }else{
-     $actionUrl = $block->getFailureUrl();
+     $response_info = json_decode($response);
+     if ($response_info ->success == true && $response_info ->result->status == 'PAID'){
+        $actionUrl = $block->getSuccessUrl();
+        
+     }elseif($response_info ->success == true && $response_info ->result->status == 'PENDING'){
+         $actionUrl = $block->getPointCheckoutUrl();
+         
+     }else{
+         $actionUrl = $block->getFailureUrl();
+     }
  }
  ?>
 <br/>
