pointcheckout logo UI on checkout add what is PointCheckout link

--- a/PointCheckout/PointCheckoutPaymentGateway/view/frontend/web/template/payment/form.html
+++ b/PointCheckout/PointCheckoutPaymentGateway/view/frontend/web/template/payment/form.html
@@ -6,7 +6,7 @@
                class="radio"
                data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
         <label class="label" data-bind="attr: {'for': getCode()}" style="display:table-cell;vertical-align: middle;">
-        <img src='https://www.pointcheckout.com/image/logo.png' width="200px" style="padding-top: 3px;"/>&nbsp;&nbsp;<a href="https://www.pointcheckout.com/home/merchant" target="_blank" style="vertical-align: middle;"><span>Why PointCheckout</span></a><br/>
+        <img src='https://www.pointcheckout.com/image/logo.png' style="padding-top: 3px;height:25px;"/>&nbsp;&nbsp;<a href="https://www.pointcheckout.com/info/what-is-pointcheckout" target="_blank" style="position:  relative;bottom: 6px;"><span>what is PointCheckout</span></a><br/>
 <!--             <span data-bind="text: getTitle()"></span>
  -->        </label>
  
