--- a/PointCheckout/Card/view/frontend/layout/cardredirect_payment_redirect.xml
+++ b/PointCheckout/Card/view/frontend/layout/cardredirect_payment_redirect.xml
@@ -9,7 +9,7 @@
         <referenceContainer name="footer-container" remove="true"/>
 
         <referenceContainer name="content">
-            <block class="PointCheckout\Card\Block\Index" template="PointCheckout_Card::redirect.phtml" cacheable="false" />
+            <block name="PointCheckout_Card_Redirect" class="PointCheckout\Card\Block\Index" template="PointCheckout_Card::redirect.phtml" cacheable="false" />
         </referenceContainer>
     </body>
 </page>
